--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -5,6 +5,9 @@
       <li><a routerLink="/logout" routerLinkActive="active">Logout</a></li>
     </ul>    
     <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a routerLink="/rentalpayments/all" routerLinkActive="active">Rent</a></li>
+    </ul>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a routerLink="/refdatas/all" routerLinkActive="active">Ref Data</a></li>
     </ul>    
     <ul id="nav-mobile" class="right hide-on-med-and-down">
