--- a/src/app/rentalpayments/rentalpayments.component.html
+++ b/src/app/rentalpayments/rentalpayments.component.html
@@ -5,7 +5,7 @@
     <td width="50%"><b>Sth Kingsville</b></td>
   </tr>
   <tr>
-    <td valign="top">
+    <td style="vertical-align: top">
       <table>
         <thead>
         <tr>
@@ -42,7 +42,7 @@
         </tbody>
       </table>
     </td>
-    <td valign="top">
+    <td style="vertical-align: top">
         <table>
           <thead>
           <tr>
