--- a/src/app/ref-data/ref-datas.component.html
+++ b/src/app/ref-data/ref-datas.component.html
@@ -70,7 +70,7 @@
       <td>{{ refData.description }}</td>
       <td>{{ refData.typeDescription }}</td>
       <td>
-        <a [routerLink]="['/refdatas', refData.value]">
+        <a [routerLink]="['/refdatas', refData.id]">
           <i class="material-icons">mode_edit</i>
         </a>
       </td>
